# MTGSLIDER

./: .gitignore  EXECUTION_LOG.md  PARKING_LOT.md  README.md  REFRAME_NOTES.md  ROADMAP.md  SCHOLARLYVALUES.md  pyproject.toml  requirements.txt
conversation_log/: Q01_initial_pipeline_spec_dump.md  Q02_domain_layer_spec_dump.md  Q03_topic_first_reframe.md  Q04_presentation_compiler_design.md  Q05_go_run_parking.md  Q06_go_run_reframe.md  Q07_build_authorization.md  Q08_continue_work.md  Q09_bulk_100_slideshows.md  Q10_representative_copy.md  Q11_oed_skill.md  Q12_tweets_keywords.md  Q13_artist_characters.md  Q14_author_tropes.md  Q15_context_engineering.md  Q16_create_per_query_log.md  Q17_deckard_boundary_plan.md  Q18_competitive_history_ingest.md  Q19_multilingual_etymology.md  Q20_chatgpt_ingest_deckard.md  Q21_overlay_integration.md  Q22_run_em_judgment.md  Q23_commit_and_push.md  Q24_attila_temperament_retracted.md  Q25_ignore_attila.md  Q26_browseable_website.md  Q27_incomplete_input.md  Q28_deploy_pages.md  Q29_scholarly_values.md  README.md
decklists/: HOGAAK_BRIDGEVINE_MC_BARCELONA_2019.md
site/: code.html  conversation.html  decklists.html  decks.html  docs.html  historical_trips.html  index.html  style.css
tests/: conftest.py  test_cli.py  test_compiler_differentiation.py  test_packet_and_slides.py  test_scryfall.py  test_themes.py
themes/: bulk_index.csv  bulk_index.md  bulk_skipped.csv
tools/: build_site.py  bulk_generate.py  cross_query_demo.py  ingest_decklist.py  ingest_historical_trips.py  theme_specs.py
writing/: 100_magical_keywords.md  (+6 more)
(+72 files in other folders)
